--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node test/*.js"
   },
   "dependencies": {
-    "through": "~2.3.4"
+    "through": "~2.3.4",
+    "deep-equal": "~0.0.0"
   },
   "devDependencies": {
     "read-stream": "~2.1.1"
